# dredarkLeaderboardLib

./: .gitignore  LICENSE  README.md  SECURITY.md  base.py  main.py  package.json  pyproject.toml  replit.nix  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
examples/: archiveExample.py  basicsExample.py  legacyExample.py
src/dredarkLeaderboardLib/: __init__.py  archive.py  base.py  checks.py  decorators.py  errors.py  legacy.py
src/dredarkLeaderboardLib_JaWarrior12/: base.py
tests/: test_archiveModule.py  test_baseModule.py
